# resuMe

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/resume/: __init__.py  app.py  cli.py  history_store.py  resume_chatbot.py
src/resume/agents/: classifier.py  persona.py  refiner.py  retriever.py  summarizer.py
src/resume/db/: cache_store.py  resume_reader.py  vector_store.py  vector_store_manager.py
src/resume/me/: summary.txt
src/resume/repository/: answer_repository.py  history_repository.py
tests/: test_cli.py
