[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "resume"
version = "0.1.0"
description = "A minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["scaffold", "cli", "template"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "pypdf>=4.2.0",
  "gradio>=3.50.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
resume = "resume.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


